--- a/MANIFEST.IN
+++ b/MANIFEST.IN
@@ -1,4 +1,5 @@
 include src/ribo_remover/data/*
+include src/ribo_remover/data/blast_db/*
 include setup.py
 global-exclude *.pyc
 global-exclude __pycache__
